# cmake-ci-example

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: library.cpp.65C8330FBF5AD708.idx  library.hpp.4B10D75C773165AA.idx  main.cpp.3B058721141DAAC9.idx
.github/workflows/: cmake-build.yml
src/executable/: CMakeLists.txt  main.cpp
